Fixed image spillover on 32" monitor

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,9 +19,9 @@ a {
   color: orange;
 }
 
-.Overview {
+/* .Overview {
   max-height: 600px;
-}
+} */
 
 .FormSubmit {
   margin: 5px;
